--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,9 @@
+browser.id=SL[/Browsers/MicrosoftEdgeBrowser
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=
-index.file=index.php
-run.as=LOCAL
-url=http://localhost/ProjetDoctolib/
+hostname=localhost
+port=8000
+router=app/router/router.php
+run.as=INTERNAL
+url=http://localhost:8000/
